--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div class="mainFooter">
+    <div class="mainLogo">
+        <img routerLink="/profile" src="assets/onlyLogo.png" alt="">
+    </div>
+    <ul class="mainUl">
+        <li routerLink="/profile">Profile</li>
+        <li routerLink="/work">Work</li>
+        <li routerLink="/projects">Projects</li>
+        <li routerLink="/education">Education</li>
+        <li routerLink="/techSkills">Technical Skills</li>
+        <li routerLink="/otherSkills">Other Skills</li>
+        <li routerLink="/resume">Resume</li>
+    </ul>
+    <button routerLink="/contactMe" class="contactMe">
+        Contact Me
+    </button>
+</div>
