profile page done

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,6 @@
 .mainFooter{
     margin: 0 auto 0;
-    width: 1000px;
+    width: 100%;
     background-color: black;
     display: flex;
     justify-content: space-between;
