--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,4 +1,201 @@
-img{
-    height: 100%;
-    width: 100%;
+.profileMain {
+    .backImg {
+        height: 100%;
+        width: 100%;
+        opacity: 0.3;
+    }
+
+    .mainInfoAndImg {
+        display: flex;
+        gap: 2rem;
+        position: absolute;
+        top: 50%;
+        left: 30%;
+        transform: translate(-50%, -50%);
+        align-items: center;
+
+        .mainInfo {
+            display: inline-block;
+
+            .intro {
+                color: white;
+                font-size: 35px;
+                letter-spacing: 1.5px;
+            }
+
+            .name {
+                color: rgb(0, 132, 255);
+                font-size: 70px;
+                font-weight: bold;
+                letter-spacing: 1.5px;
+            }
+
+            .profession {
+                color: #ffb703;
+                font-size: 50px;
+                letter-spacing: 2px;
+            }
+
+            .btns {
+                display: flex;
+                gap: 2rem;
+                margin-top: 2rem;
+
+                .resume {
+                    border: 2px solid white;
+                    border-radius: 20px;
+                    background-color: transparent;
+                    color: white;
+                    padding: 0.5rem 3rem;
+                    letter-spacing: 2px;
+                    font-weight: bold;
+                }
+
+                .resume:hover {
+                    box-shadow: 0px 0px 15px 2px white;
+                    transition: 0.5s;
+                    border: 2px solid black;
+                    background-color: white;
+                    color: black;
+                }
+            }
+
+            .socialBtns {
+                display: flex;
+                gap: 2rem;
+                margin-top: 2rem;
+
+                i {
+                    font-size: 40px;
+                    color: white;
+                    cursor: pointer;
+                    filter: drop-shadow(0 0 0.75rem rgb(0, 132, 255));
+                }
+
+                i:hover {
+                    filter: none;
+                    transition: 0.5s;
+                }
+            }
+        }
+
+        .mainImg {
+            img {
+                height: 20rem;
+                width: 15rem;
+            }
+        }
+    }
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: visible;
+    opacity: 1;
+
+    .popup {
+        margin: 20px auto;
+        padding: 20px;
+        background: #2f2f2f;
+        border-radius: 15px;
+        width: min-content;
+        position: relative;
+        transition: all 5s ease-in-out;
+        z-index: 999;
+
+        .backImg {
+            height: 100%;
+            width: 100%;
+            opacity: 0.9;
+        }
+
+        .close {
+            position: absolute;
+            top: -10px;
+            right: 10px;
+            transition: all 200ms;
+            font-size: 50px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #bababa;
+        }
+
+        .close:hover {
+            color: rgb(0, 132, 255);
+            cursor: pointer;
+        }
+
+        .content {
+            max-height: fit-content;
+            width: fit-content;
+            overflow: auto;
+
+            h2 {
+                text-decoration: underline;
+                font-weight: bold;
+                letter-spacing: 1px;
+                color: rgb(0, 132, 255);
+            }
+
+            span {
+                padding: 0 2rem;
+                color: rgb(255, 255, 255);
+                letter-spacing: 1px;
+            }
+
+            .otherInfo {
+                display: flex;
+                width: 100%;
+                margin-top: 2rem;
+
+                .mainInfo{
+                    .twoBlock {
+                        display: inline-block;
+                        gap: 2rem;
+                        align-items: center;
+                        width: 100%;
+                        
+    
+                        .info {
+                            display: flex;
+                            gap: 2rem;
+                            width: 100%;
+                            margin: 1.5rem 0;
+                            align-items: center;
+    
+                            i {
+                                font-size: 30px;
+                                color: #ffb703;
+                                width: 10%;
+                                text-align: center;
+                            }
+    
+                            .data {
+                                padding: 0;
+                                width: 90%;
+                                letter-spacing: 1px;
+                            }
+
+                            .textWrap{
+                                text-wrap: nowrap;
+                            }
+                        }
+                    }
+                }
+                .profileImg{
+                    img{
+                        height: 30rem;
+                        width: auto;
+                        margin-top: -10rem;
+                    }
+                }
+            }
+        }
+    }
 }
