projects page done

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,1 +1,78 @@
-<p>projects works!</p>
+<div class="mainProjects">
+    <img src="assets/projectBack2.jpg" alt="">
+    <h1 class="heading">Projects</h1>
+    <div class="mainCard">
+        <div class="card">
+            <div class="imgAndDetails">
+                <div class="proIcon">
+                    <img src="assets/mernLogin.jpg" alt="">
+                </div>
+                <div class="headings">
+                    <h3>MERN Stack CRUD Application with Login and Register</h3>
+                    <h4>1 Jan 2023 to 7 Mar 2023</h4>
+                </div>
+            </div>
+            <div class="details">
+                <ul>
+                    <li><b>1)</b> User can register new account.</li>
+                    <li><b>2)</b> Already registered user can directly login to the system using username and password.
+                    </li>
+                    <li><b>3)</b> Logged in user can perform the CRUD operation.</li>
+                    <li><b>4)</b> User can create new record also update the existing record and delete the record.</li>
+                    <li><b>5)</b> Every user has its own user id and own number of record to perform the CRUD operation.
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgAndDetails">
+                <div class="proIcon">
+                    <img src="assets/mean5.png" alt="">
+                </div>
+                <div class="headings">
+                    <h3>Student Record Keeping (Freelance)</h3>
+                    <h4>15 Feb 2021 to 21 Apr 2021</h4>
+                </div>
+            </div>
+            <div class="details">
+                <ul>
+                    <li><b>1)</b> Admin can create new Record of student.</li>
+                    <li><b>2)</b> He can also upload the image.</li>
+                    <li><b>3)</b> The list of students will be displayed in tabuler format.</li>
+                    <li><b>4)</b> The Image of student will be shown in the table with other information of student.
+                    </li>
+                    <li><b>5)</b> Admin can update the record of perticular existing student and delete the record
+                        accoording to the need.
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgAndDetails">
+                <div class="proIcon">
+                    <img src="assets/snippet.png" alt="">
+                </div>
+                <div class="headings">
+                    <h3>Snippet Visualization System (College Project)</h3>
+                    <h4>15 Aug 2020 to 29 Apr 2021</h4>
+                </div>
+            </div>
+            <div class="details">
+                <ul>
+                    <li><b>1)</b> TWe introduced Snippet visualization technique to visualize the collection of textual
+                        resul returned from web a query. The method builds meaningful layouts that optimize the
+                        placement of snippets that considers both overlapping removal and preservation of
+                        neighborhood structures.</li>
+                    <li><b>2)</b>Since snippet visualization system relays only on information extracted from web
+                        result, it can be plugged into search engines in a straightforward manner.</li>
+                    <li><b>3)</b> One direction that this work might continue on is to improve on the accuracy of
+                        similarity
+                        calculation between documents by employing different similarity calculation strategies.</li>
+                    <li><b>4)</b> Although the current scheme proved more accurate than traditional methods, there are
+                        still
+                        room for improvement.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
