--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,8 +1,8 @@
 <div class="mainWork">
     <img src="https://c1.wallpaperflare.com/preview/547/595/807/business-computer-contemporary-dark.jpg" alt="">
-
+    
+    <h1 class="heading">Work Experience</h1>
     <div class="workInfo">
-        <h1>Work Experience</h1>
         <div class="cards">
             <div class="card">
                 <div class="imgComp" style="text-align: center;">
