--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -32,7 +32,7 @@
             border-radius: 10px;
             box-shadow: 0px 0px 15px 2px black;
             backdrop-filter: blur(15px);
-            background-color: transparent;
+            background-color: black;
             margin: 1rem 0;
             width: 700px;
 
