education page done

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,1 +1,37 @@
-<p>education works!</p>
+<div class="mainEdu">
+    <img class="backImg" src="https://c0.wallpaperflare.com/preview/318/2/423/pr4r2m4evt2u4aishdff44upth.jpg" alt="">
+
+    <div class="innerEdu">
+        <h2>Education Background</h2>
+        <div class="imgAndDetails">
+            <div class="img">
+                <img src="https://futurevolve.com/uploads/college/wide_image/8302/DKTE_Image.JPG" alt="">
+            </div>
+            <div class="details">
+                <h4><b>DKTE Textile and Engineering Institute, Ichalkaranji</b></h4>
+                <p class="degree">B.Tech (Information Technology)  62%</p>
+                <p class="year">July 2016 to June 2021</p>
+            </div>
+        </div>
+        <div class="imgAndDetails">
+            <div class="details marginRight">
+                <h4><b>Vidyamandir Jr College, Islampur</b></h4>
+                <p class="degree">H.S.C. (Science)  60%</p>
+                <p class="year">August 2014 to May 2016</p>
+            </div>
+            <div class="img" style="z-index: 0;">
+                <img src="https://lh5.googleusercontent.com/p/AF1QipNFV5ryfm__1J3xvUiUjS93Z1NKU0bI_WkHyy3o=w1080-k-no" alt="">
+            </div>
+        </div>
+        <div class="imgAndDetails">
+            <div class="img">
+                <img src="https://i.ytimg.com/vi/lE0jEU03L5k/maxresdefault.jpg" alt="">
+            </div>
+            <div class="details">
+                <h4><b>Mahatma Gandhi Vidyalaya, Ashta</b></h4>
+                <p class="degree">S.S.C  80%</p>
+                <p class="year">June 2007 to April 2014</p>
+            </div>
+        </div>
+    </div>
+</div>
