--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,10 +7,12 @@
     align-items: center;
     padding: 0 1rem;
     height: 4rem;
+    position: fixed;
+    z-index: 999;
 
     .mainLogo{
         img{
-            height: 2rem;
+            height: 3rem;
             width: auto;
             cursor: pointer;
             border-radius: 10px;
@@ -31,7 +33,7 @@
             font-weight:normal;
             cursor: pointer;
             color: white;
-            font-size: 16px;
+            font-size: 18px;
             letter-spacing: 1.5px;
         }
         li:hover{
