--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -3,6 +3,7 @@
         height: 100%;
         width: 100%;
         opacity: 0.3;
+        position: fixed;
     }
 
     .mainInfoAndImg {
@@ -29,7 +30,19 @@
                 font-weight: bold;
                 letter-spacing: 1.5px;
             }
-
+            .name::after{
+                position: absolute;
+                width: 0%;
+                content: "";
+                left: 0;
+                bottom: 0;
+                height: 3px;
+                background-color: #333;
+                transition: all ease 1s;
+            }
+            .name:hover::after{
+                width: 100%;
+            }
             .profession {
                 color: #ffb703;
                 font-size: 50px;
@@ -100,7 +113,7 @@
     opacity: 1;
 
     .popup {
-        margin: 20px auto;
+        margin: 5rem auto;
         padding: 20px;
         background: #2f2f2f;
         border-radius: 15px;
