--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="mainProjects">
-    <img src="assets/projectBack2.jpg" alt="">
-    <h1 class="heading">Projects</h1>
+    <img class="backImg" src="https://wallpapers.com/images/hd/4k-laptop-on-black-desk-qrlk8vcxz01kbm0h.jpg" alt="">
     <div class="mainCard">
+        <h1 class="heading">Projects</h1>
         <div class="card">
             <div class="imgAndDetails">
                 <div class="proIcon">
@@ -10,6 +10,7 @@
                 <div class="headings">
                     <h3>MERN Stack CRUD Application with Login and Register</h3>
                     <h4>1 Jan 2023 to 7 Mar 2023</h4>
+                    <button class="sourceBtn" (click)="openSourceCode('MERN')">Open Source Code</button>
                 </div>
             </div>
             <div class="details">
@@ -32,6 +33,7 @@
                 <div class="headings">
                     <h3>Student Record Keeping (Freelance)</h3>
                     <h4>15 Feb 2021 to 21 Apr 2021</h4>
+                    <button class="sourceBtn" (click)="openSourceCode('MEAN')">Open Source Code</button>
                 </div>
             </div>
             <div class="details">
@@ -59,11 +61,11 @@
             </div>
             <div class="details">
                 <ul>
-                    <li><b>1)</b> TWe introduced Snippet visualization technique to visualize the collection of textual
+                    <li><b>1)</b> We introduced Snippet visualization technique to visualize the collection of textual
                         resul returned from web a query. The method builds meaningful layouts that optimize the
                         placement of snippets that considers both overlapping removal and preservation of
                         neighborhood structures.</li>
-                    <li><b>2)</b>Since snippet visualization system relays only on information extracted from web
+                    <li><b>2)</b> Since snippet visualization system relays only on information extracted from web
                         result, it can be plugged into search engines in a straightforward manner.</li>
                     <li><b>3)</b> One direction that this work might continue on is to improve on the accuracy of
                         similarity
