--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,38 +1,34 @@
 .mainProjects {
 
-    img {
+    .backImg {
         height: 100%;
         width: 100%;
         opacity: 0.3;
-    }
-
-    .heading {
-        font-size: 60px;
-        background-image: repeating-linear-gradient(to right, #ffb703, rgb(0, 132, 255) 10%, #3c9a44 20%);
-        color: transparent;
-        background-clip: text;
-        -webkit-background-clip: text;
-        top: 15%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        position: absolute;
+        position: fixed;
     }
 
     .mainCard {
-        position: absolute;
-        top: 75%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        margin: 0 auto 5rem;
+        width: 1000px;
         text-align: center;
-        margin-top: 23rem;
+
+        .heading {
+            font-size: 60px;
+            background-image: repeating-linear-gradient(to right, #ffb703, rgb(0, 132, 255) 10%, #3c9a44 20%);
+            color: transparent;
+            background-clip: text;
+            -webkit-background-clip: text;
+            text-align: center;
+            padding-top: 5rem;
+        }
 
         .card {
-            display: inline-block;
+            display: inline-grid;
             padding: 1rem;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px 2px black;
+            box-shadow: 0px 0px 15px 2px rgb(0, 0, 0);
             backdrop-filter: blur(15px);
-            background-color: black;
+            background-color: transparent;
             margin: 1rem 0;
             width: 700px;
 
@@ -49,6 +45,7 @@
                         opacity: 1;
                         height: 10rem;
                         width: auto;
+                        box-shadow: 0px 0px 15px 1px rgb(61, 61, 61);
                     }
                 }
 
@@ -57,8 +54,24 @@
                     text-align: left;
                     color: white;
 
+                    h3{
+                        font-size: 24px;
+                    }
                     h4 {
                         color: #ffb703;
+                    }
+
+                    .sourceBtn{
+                        background-color: transparent;
+                        border: 2px solid rgb(0, 132, 255);
+                        border-radius: 10px;
+                        padding: 0.5rem 1rem;
+                        color: rgb(0, 132, 255);
+                    }
+                    .sourceBtn:hover{
+                        background-color: black;
+                        box-shadow: 0px 0px 15px 1px rgb(0, 132, 255);
+                        transition: 0.5s;
                     }
                 }
             }
