education page done

--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -58,6 +58,10 @@
                     color: rgb(0, 132, 255);
                     font-size: 20px;
                 }
+
+                .year{
+                    color: #ffb703;
+                }
             }
         }
     }
