--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -34,18 +34,18 @@
                     border-radius: 10px;
                     z-index: 999;
                     opacity: 0.5;
-                    box-shadow: 0px 0px 15px 1px rgb(121, 121, 121);
+                    // box-shadow: 0px 0px 15px 1px rgb(121, 121, 121);
                 }
             }
             .details{
-                background-color: transparent;
+                background-color: black;
                 backdrop-filter: blur(15px);
                 border-radius: 15px;
                 margin-left: -5rem;
                 z-index: 999;
                 text-align: left;
                 padding: 1rem;
-                border: 1px solid rgb(46, 46, 46);
+                box-shadow: 0px 0px 15px 1px rgb(51, 51, 51);
                 
 
                 h4, p{
